# mastermind-vps-management

./: .gitignore  CHANGELOG.md  COMPLETE_SYSTEM_ANALYSIS.md  CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  MANUAL_UPLOAD_GUIDE.md  README-updated.md  README.md  SECURITY.md  install.sh  mastermind-web.sh  mastermind.sh  pyproject.toml  repair-installation.sh  replit.md  verify-system.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
core/: installer.sh  menu.sh  utils.sh
network/: firewall.sh
protocols/: openvpn.sh  shadowsocks.sh  ssh-custom.sh  v2ray.sh  wireguard.sh  xray.sh
proxies/: python-gettunel.py  python-openvpn.py  python-seguro.py  python-simple.py  python-tcp-bypass.py  websocket-custom.py  websocket-systemctl.py  ws-directo.py
web/: app.py
web/templates/: dashboard.html  error.html  index.html  login.html
